--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-
+h1 {
+    color: rgb(75, 3, 95);
+    background-color: rgb(198, 17, 189);
+    border: 4px solid black;
+    font-family: "Gill Sans Extrabold", sans-serif;
+  }
+  
+  p {
+    color: rgb(0, 0, 0);
+    background-color: rgb(251, 233, 250);
+    font-family: "Minecraftia", cursive;
+  }
