--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face{
   font-family: "minecraft-font";
-  src: url("https://github.com/underscoreBon/underscoreBon.github.io/raw/main/styles/fonts/minecraft/minecraftia-regular-webfont.woff2");
+  src: url("styles/fonts/minecraft/minecraftia-regular-webfont.woff2");
 }
 
 @font-face{
