--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-@font-face{
-  font-family: "minecraft-font";
-  src: url("styles/fonts/minecraft/minecraftia-regular-webfont.woff2");
+
+@font-face {
+  font-family: 'minecraft-font';
+  src: url('fonts/minecraftia-regular-webfont.woff2') format('woff2'),
+       url('fonts/minecraftia-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face{
