this will be the boinsite of all

--- a/css/style.css
+++ b/css/style.css
@@ -23,40 +23,7 @@
 p {
   /*text-align: center;*/
   color: rgb(0, 0, 0);
-  font-family: "minecraft-font", serif;
-}
-
-.navigationborder {
-  padding-left: 10%;
-  padding-right: 10%;
-  border-end-start-radius: 1%;
-  border-end-end-radius: 1%;
-  color: rgb(36, 7, 44);
-  background-color: rgb(198, 17, 189);
-  border: 4px solid black;
-  font-family: "minecraft-font", serif;
-}
-
-.topnav {
-  font-family: "minecraft-font", serif;
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ffc3f8;
-  color: rgb(0, 0, 0);
+  font-family: sans-serif;
 }
 
 iframe[seamless] {
