--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
 
     {% include meta.html %}
 
@@ -25,8 +25,8 @@
             <a href="/"><img class="bon_container_top"src="/images/logo.svg" alt="n_bonnie2" width="200" height="100"> </img>
                 <div class="pixel_font bon_container_links">
                     <a class="white_link" href="/">Home</a> -
-                    <a class="white_link" href="/socials">Socials</a> -
                     <a class="white_link" href="/blog">Blog</a> -
+                    <a class="white_link" href="/projects">Projects</a> - 
                     <a class="white_link" href="/more">More</a>
                 </div>
          </nav>
