--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,14 @@ layout: default
 
 <article class="post bon_container pixel_font">
     Bonsite - Blog Post
-  <h1>{{ page.title }}</h1>
-
+  <h1>{{ page.title }}</h1><caption>> Written on {{ page.date | date: "%B %e, %Y" }}</caption>
   <div class="entry bon_container pixel_font">
     {{ content }}
   </div>
+
+  <p>
+    <a class="" href="/blog"><- Return to Blogs</a>
+  </p>
 
   {% include disqus.html %}
 </article>
