--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,10 @@
+---
+permalink: /projects
+---
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
 
     {% include meta.html %}
 
@@ -16,7 +19,6 @@
     <script type="text/javascript" src="{{ site.baseurl }}/common.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <div>
