--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,16 +3,17 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
+
     {% if page.excerpt %}
+    <meta name="author" content="Bonsite Post"/>
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
     <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
     {% else %}
+    <meta name="author" content="Bonsite"/>
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
-    <meta name="author" content="{{ site.name }}" />
 
-    {% if page.title %}
-    <meta property="og:title" content="{{ page.title }}" />
-    <meta property="twitter:title" content="{{ page.title }}" />
-    {% endif %}
+    <meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
+    <meta property="twitter:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
