fixed discord embeds

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -17,3 +17,6 @@
 
     <meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
     <meta property="twitter:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
+
+    <meta property="og:image" content="{{ site.baseurl }}/images/og_image.png" />
+    <meta property="twitter:image" content="{{ site.baseurl }}/images/og_image.png" />
