--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@ permalink: /projects
 
         <footer class="pixel_font text_shadow">Site Hosted on: 
         <a class="white_link" href="https://pages.github.com/">Github Pages</a>
+        <br>
+            Visits: <script type="text/javascript" src="https://counter.websiteout.com/js/21/9/0/0"></script>
+            <noscript>please enable javascript to enable the site counter.</noscript>
         </footer>
 
   </body>
