--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -20,3 +20,5 @@
 
     <meta property="og:image" content="{{ site.baseurl }}/images/og_image.png" />
     <meta property="twitter:image" content="{{ site.baseurl }}/images/og_image.png" />
+
+    <meta name="google-site-verification" content="GBQzbD_3hAaiqipnKbARy8tXqh634_iY-2Ow__KtWcI" />
