--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
-    <title>{{ site.name }} {% if page.title %} – {{ page.title }}{% endif %}</title>
+    <title>{{ page.title }}</title>
 
     {% if page.excerpt %}
     <meta name="author" content="n_bonnie2"/>
@@ -18,7 +18,9 @@
     <meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
     <meta property="twitter:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}" />
 
-    <meta property="og:image" content="{{ site.baseurl }}/images/og_image.png" />
-    <meta property="twitter:image" content="{{ site.baseurl }}/images/og_image.png" />
+<!--     <meta property="og:image" content="{{ site.baseurl }}/images/og_image.png" />
+    <meta property="twitter:image" content="{{ site.baseurl }}/images/og_image.png" /> -->
+
+    <meta name="google-site-verification" content="GBQzbD_3hAaiqipnKbARy8tXqh634_iY-2Ow__KtWcI" />
 
     <meta name="google-site-verification" content="GBQzbD_3hAaiqipnKbARy8tXqh634_iY-2Ow__KtWcI" />
